# OperSyst

colloquium1/: fibonacci.cpp
colloquium2/: colloquium2.cpp
lab1/: CMakeLists.txt
lab1/creator/: creator.cpp  creator.h
lab1/data/: data.h
lab1/lab1/: lab1.cpp
lab1/reporter/: reporter.cpp  reporter.h
lab1/tests/: tests.cpp
lab2/: CMakeLists.txt  lab2.cpp  test.cpp
lab3/: CMakeLists.txt
lab3/lab3_11/: CMakeLists.txt  main.cpp  marker.cpp  marker.h  tests.cpp  thread.cpp  thread.h
lab3/lab3_98/: CMakeLists.txt  main.cpp  marker.cpp  marker.h  tests.cpp  thread.cpp  thread.h
lab3/lab3_C98/: lab3.cpp  lab3.h
lab3/lab3_С14/: lab3.cpp  lab3.h
lab3/tests_C14/: tests.cpp
lab3/tests_C98/: tests.cpp
